# fmemo

./: .gitignore  Cargo.toml  Makefile  README.md  REQUIREMENT.md  TODO.md  collapsible_test.html  debug_test.md  dev.md  example.fmemo  input.md  nested_response.html  response.html  simple_test.md  test.fmemo  test_collapsible.html  test_complex.md  test_hierarchy.md  test_list.md  test_recursive.md  test_tags.md
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css  setupTests.ts
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/App/: App.css  App.test.tsx  App.tsx
frontend/src/components/CodeBlock/: CodeBlock.css  CodeBlock.tsx
frontend/src/components/FileExplorer/: FileExplorer.css  FileExplorer.tsx  FileTreeItem.tsx
frontend/src/components/FlowView/: FlowNode.tsx  FlowView.css  FlowView.tsx
frontend/src/components/MemoContainer/: MemoContainer.css  MemoContainer.tsx
frontend/src/components/MemoViewer/: MemoViewer.css  MemoViewer.tsx
frontend/src/components/ZoomControls/: ZoomControls.css  ZoomControls.tsx
frontend/src/hooks/: useApi.ts  useFileSystem.ts  useMemoCache.test.ts  useMemoCache.ts  useWebSocket.ts  useZoom.ts
frontend/src/stories/: App.stories.ts  CodeBlock.stories.ts  FileExplorer.stories.ts  FlowView.stories.ts  MemoButton.stories.ts  MemoContainer.stories.ts  MemoViewer.stories.ts  ZoomControls.stories.ts
frontend/src/types/: index.ts  memo.types.ts
src/: lib.rs  main.rs  main_backup.rs  parser.rs  schema.rs  server.rs
(+7 files in other folders)
