[package]
name = "fmemo"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
notify = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.18"
futures-util = "0.3"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
